# To_Exercises

./: .gitignore  README.md  README_FASTAPI.md  pyproject.toml  requirements.txt
.claude/: piper-voices-dir.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/agents/: bmd-custom-bmb-bmad-builder.agent.md  bmd-custom-bmm-analyst.agent.md  bmd-custom-bmm-architect.agent.md  bmd-custom-bmm-dev.agent.md  bmd-custom-bmm-pm.agent.md  bmd-custom-bmm-quick-flow-solo-dev.agent.md  bmd-custom-bmm-sm.agent.md  bmd-custom-bmm-tea.agent.md  bmd-custom-bmm-tech-writer.agent.md  bmd-custom-bmm-ux-designer.agent.md  (+8 more)
.scripts/: debug_post.py
ExerciseDatabase/: config.yaml
_cfg/: agent-manifest.csv  files-manifest.csv  manifest.yaml  task-manifest.csv  tool-manifest.csv  workflow-manifest.csv
bmb/: config.yaml
bmm/: config.yaml
cis/: README.md  config.yaml
core/: config.yaml
docs/: api-contracts.md  architecture.md  bmm-workflow-status.yaml  create_github_issues.sh  data-models.md  development-guide.md  epics.md  epics_context_validation.md  index.md  mvp_and_acceptance_criteria.md  opencode-instructions.md  prd.md  project-scan-report.json  project_context.md  repo_health_and_sprint_plan.md  sprint-backlog.md  sprint-tasks-export.csv  test-summary.md
stories/: 1-1-project-packaging-dev-quickstart.md
tests/: conftest.py  test_api.py  test_apply_upsert.py  test_apply_upsert_transactional.py  test_db_schema.py  test_importer.py  test_packaging.py  test_pyproject.py  test_readme_quickstart.py
(+767 files in other folders)
