[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "to_exercises"
version = "0.0.0"
description = "To_Exercises service"
authors = [{name = "Diogo"}]
readme = "README.md"
# Packaging configuration to support editable installs and src layout
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlmodel",
  "typer",
  "httpx",
]
optional-dependencies = { dev = ["pytest", "pytest-asyncio", "httpx"] }

[tool.setuptools.packages.find]
where = ["src"]
